# xsh-quickred

./: README.md  pyproject.toml
archive/: readme_3af492b6-ec24-4696-bf7c-ae449fbe55a8.txt  requested_files.txt
xshqred/: xsh_quickrun.py
xshqred.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
xshqred/NIR/: NIR.py  NIR_cl.py
xshqred/NIR/Output/: xsh_scired_slit_nod_NIR.restart  xsh_scired_slit_nod_NIR.sof  xsh_scired_slit_nod_SCI_SLIT_FLUX_MERGE1D_NIR_NIR_x_.fits  xsh_scired_slit_nod_SCI_SLIT_FLUX_ORDER1D_NIR_NIR_x_.fits  xsh_scired_slit_nod_SCI_SLIT_MERGE1D_NIR_NIR_x_.fits  xsh_scired_slit_nod_SCI_SLIT_ORDER1D_NIR_NIR_x_.fits
xshqred/UVB/: UVB.py  UVB_cl.py
xshqred/UVB/Output/: xsh_scired_slit_nod_SCI_SLIT_FLUX_MERGE1D_UVB_UVB_1x2_100k.fits  xsh_scired_slit_nod_SCI_SLIT_FLUX_ORDER1D_UVB_UVB_1x2_100k.fits  xsh_scired_slit_nod_SCI_SLIT_MERGE1D_UVB_UVB_1x2_100k.fits  xsh_scired_slit_nod_SCI_SLIT_ORDER1D_UVB_UVB_1x2_100k.fits  xsh_scired_slit_nod_UVB.restart  xsh_scired_slit_nod_UVB.sof
xshqred/VIS/: VIS.py  VIS_cl.py
xshqred/VIS/Output/: xsh_scired_slit_nod_SCI_SLIT_FLUX_MERGE1D_VIS_VIS_1x2_100k.fits  xsh_scired_slit_nod_SCI_SLIT_FLUX_ORDER1D_VIS_VIS_1x2_100k.fits  xsh_scired_slit_nod_SCI_SLIT_MERGE1D_VIS_VIS_1x2_100k.fits  xsh_scired_slit_nod_SCI_SLIT_ORDER1D_VIS_VIS_1x2_100k.fits  xsh_scired_slit_nod_VIS.restart  xsh_scired_slit_nod_VIS.sof
